# Pype-Deid

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_OVERVIEW.md  README.md  SETUP.md  compose.prod.yaml  compose.yaml  pyproject.toml
data/: README.md  modes.json
data/pipelines/: clinical-ensemble.json  clinical-fast.json  clinical-llm-presidio.json  clinical-llm.json  clinical-transformer-presidio.json  clinical-transformer.json  openai-privacy.json
docs/: README.md  api.md  configuration.md  data-ingestion.md  deployment.md  docker-quickstart.md  evaluation.md  models.md  neuroner-setup.md  pipes-and-pipelines.md  synthesis.md  transforms-and-composition.md  ui.md
frontend/: .env.example  README.md  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend-production/: .env.example  README.md  tsconfig.app.json  vite.config.ts
frontend-production/src/: App.tsx
frontend-shared/: README.md  package-lock.json  package.json
frontend-shared/src/: types.ts
frontend/src/: App.tsx
models/: README.md
neuroner-cspmc/sidecar/: README.md  compose.yaml
scripts/: compose_datasets.py  dataset_analytics.py  ingest_sredh_chatgpt.py  list_spans_by_label.py  process_asq_phi.py  process_mimic_noteevents.py  setup_neuroner.sh  transform_dataset.py
tests/: conftest.py  test_accumulation.py  test_analytics.py  test_asq_phi.py  test_auth_contract.py  test_blacklist.py  test_brat_ingest.py  test_brat_roundtrip.py  test_compose.py  test_config_openai_env.py  test_datasets_api.py  test_detector_label_mapping.py  test_dictionaries.py  test_env_file.py  test_eval_confusion_matrix.py  test_eval_macro.py  test_eval_pred_label_remap.py  test_eval_redaction.py  test_eval_runner_redaction.py  test_eval_runner_risk_profile.py  test_from_batch.py  test_huggingface_ner.py  test_inference_api.py  test_ingest_eval.py  test_label_space.py  test_labels.py  test_llm_ner_pipe.py  test_llm_synthesis.py  test_max_body_middleware.py  test_mimic_noteevents.py  test_models.py  test_neuroner_ner.py  test_packs.py  test_pipe_ui_schema.py  test_pipeline_intermediary.py  test_pipeline_job.py  test_production_export_jsonl.py  test_regex_ner_pipe.py  test_registry_contract.py  test_resolve_spans.py  (+10 more)
(+261 files in other folders)
