[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pypedeid"
version = "0.1.0"
description = "Modular research platform for clinical PHI detection and redaction"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Michael Lei"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22,<0.1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "python-multipart>=0.0.12",
    "click>=8.1.0,<9.0",
    # Presidio + HuggingFace transformer NER (presidio_ner, huggingface_ner inference)
    "presidio-analyzer[transformers]>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.5.0",
    "transformers>=5.7.0",
    "torch>=2.2.0",
    # LLM-backed NER (llm_ner) and synthesis
    "httpx>=0.27.0",
    "openai>=1.54.0",
]

[project.optional-dependencies]
scripts = [
    "pandas>=2.0.0",
    "faker>=2.0.0",
]
dev = [
    "pypedeid[scripts]",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
parquet = [
    "pyarrow>=14.0.0",
]
# HuggingFace fine-tuning (pypedeid train run). Inference-only HF use does
# not need this extra — transformers + torch are in the base install.
train = [
    "datasets>=2.20.0",
    "seqeval>=1.2.2",
    "accelerate>=0.33.0",
]
# Everything except the NeuroNER Docker sidecar (which has no Python deps).
all = [
    "pypedeid[dev,parquet,train]",
]

[project.scripts]
pypedeid = "pypedeid.cli:main"
pypedeid-api = "pypedeid.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "train: requires the [train] extra (transformers, torch, datasets, seqeval)",
]
# HuggingFace transformers BERT still uses tokenizers' WordPiece in a way that
# triggers this deprecation; fix will come from upstream (not our code).
filterwarnings = [
    "ignore:.*WordPiece\\.__init__ will not create from files anymore.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
